// Vitest Snapshot v1

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-bcXHqe cuDkkp"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gswNZR cuDkkp kqiSou"
  >
    Label
  </button>
</div>
`;
